CSS z-index fix

--- a/packages/venia-concept/src/components/MiniCart/mask.css
+++ b/packages/venia-concept/src/components/MiniCart/mask.css
@@ -1,4 +1,5 @@
 .root_active {
     composes: root_active from '../Mask/mask.css';
     opacity: 0.25;
+    z-index: 1;
 }
